@@ -63,6 +63,7 @@ subparty_policies_category = {
 			clear_variable = five_year_plan_mobile_radio_mast_factor
 			clear_variable = five_year_plan_MIC_factor
 			clear_variable = five_year_plan_CIC_factor
+			clear_variable = five_year_plan_office_factor
 			clear_variable = five_year_plan_NIC_factor
 			clear_variable = five_year_plan_refinery_factor
 			clear_variable = five_year_plan_naval_base_factor
