@@ -8,7 +8,7 @@
  generic_initiate_5_year_plan_desc: "We have made our decision on what we want to spend the next 5 years doing. It is time to organize the workers and bring progress to the great [Root.GetAdjective] proletariat!"
  generic_focus_on_civilian_sector: "Focus on the Civilian Sector"
  generic_focus_on_civilian_sector_desc: "The greatest effort should be put on manufacturing basic consumer goods, appliances and utilities for the good of our people. If we expand our ports, we can also sell our products to the dirty capitalists and steal the money of those imperialists."
- generic_focus_on_military_infrastructure: "Focus on Military Infrastrucure"
+ generic_focus_on_military_infrastructure: "Focus on Military Infrastructure"
  generic_focus_on_military_infrastructure_desc: "Fight for the workers is an eternal war. We might be invaded by the capitalistic pigs at any time and we need to prepare our country to maximise the effectiveness of our military operations."
  generic_focus_on_military_production: "Focus on Armament Production"
  generic_focus_on_military_production_desc: "The factory workers and labourers can't fight without weapons! We need to build more arms factories so that every patriotic citizen will be able to fight our enemies."
@@ -18,10 +18,10 @@
  generic_focus_on_resource_exploitation_desc: "The Motherland offers its resources for the workers. We need to dig every inch of the earth and utilize as much of these materials as possible."
  generic_admit_5_year_plan_failure: "Admit the Failure of the 5-Year-Plan"
  generic_admit_5_year_plan_failure_desc: "We have to admit that the plans we made for our grandiose 5-year-plan were a bit too overambitious to say the least. Admitting that is definitely a hard piece to swallow, and will only show our weakness to the world. It definitely won't be a agreeable solution for many of the party members."
- generic_nationalise_biggest_influencer_industries: "Nationalise [?var:influence_array^0.GetAdjective] Investments"
- generic_nationalise_biggest_influencer_industries_desc: "[?var:influence_array^0.GetFlag] [?var:influence_array^0.GetName] moves large amount of money through our country. They are abusing our people for capitalistic gains and that needs to be stopped. We should nationalise some of the [?var:influence_array^0.GetAdjective] holdings in our country."
- generic_nationalise_second_biggest_influencer_industries: "Nationalise [?var:influence_array^1.GetAdjective] Investments"
- generic_nationalise_second_biggest_influencer_industries_desc: "[?var:influence_array^1.GetFlag] [?var:influence_array^1.GetName] moves large amount of money through our country. They are abusing our people for capitalistic gains and that needs to be stopped. We should nationalise some of the [?var:influence_array^1.GetAdjective] holdings in our country."
+ generic_nationalise_biggest_influencer_industries: "Nationalise [?var:influence_array^0.GetFlag][?var:influence_array^0.GetAdjective] Investments"
+ generic_nationalise_biggest_influencer_industries_desc: "[?var:influence_array^0.GetFlag][?var:influence_array^0.GetName] moves large amount of money through our country. They are abusing our people for capitalistic gains and that needs to be stopped. We should nationalise some of the [?var:influence_array^0.GetAdjective] holdings in our country."
+ generic_nationalise_second_biggest_influencer_industries: "Nationalise [?var:influence_array^1.GetFlag][?var:influence_array^1.GetAdjective] Investments"
+ generic_nationalise_second_biggest_influencer_industries_desc: "[?var:influence_array^1.GetFlag][?var:influence_array^1.GetName] moves large amount of money through our country. They are abusing our people for capitalistic gains and that needs to be stopped. We should nationalise some of the [?var:influence_array^1.GetAdjective] holdings in our country."
  generic_form_paramilitary_units: "Form Paramilitary for the Youth"
  generic_form_paramilitary_units_desc: "Our youth are getting lazy and decadent. We need to form paramilitary organizations that will teach them useful life and military skills, and of course loyalty to the party."
  generic_give_research_grants: "Give Research Grants"
@@ -37,12 +37,12 @@
 
  #Tooltips
  TT_HAS_CHOSEN_5_YEAR_FOCUS: "We have chosen at least 1 area to focus on for our 5-year-plan"
- TT_5_YEAR_PLAN_CURRENT_EFFECTS: "This will impact the 5-Year-Plan with modifiers:\nPolitical Power Gain: [?five_year_plan_political_power_factor|%=+0]\n§YInfrastrucure§! construction speed: [?five_year_plan_infra_factor|%=+2]\n§YAir Base§! construction speed: [?five_year_plan_air_base_factor|%=+2]\n§YSAM-Site§! construction speed: [?five_year_plan_anti_air_factor|%=+2]\n§YStrategic Fuel Reserve§! construction speed: [?five_year_plan_fuel_reserve_factor|%=+2]\n§YIntelligence Station§! construction speed: [?five_year_plan_intelligence_station_factor|%=+2]\n§YMobile Radio Mast§! construction speed: [?five_year_plan_mobile_radio_mast_factor|%=+2]\n§YMilitary Industry§! construction speed: [?five_year_plan_MIC_factor|%=+2]\n§YCivilian Industry§! construction speed: [?five_year_plan_CIC_factor|%=+2]\n§YNaval Yard§! construction speed: [?five_year_plan_NIC_factor|%=+2]\n§YBiofuel Refinery§! construction speed: [?five_year_plan_refinery_factor|%=+2]\n§YNaval Base§! construction speed: [?five_year_plan_naval_base_factor|%=+2]\n§YLand Fort§! construction speed: [?five_year_plan_land_bunker_factor|%=+2]\n§YCoastal Fort§! construction speed: [?five_year_plan_coastal_bunker_factor|%=+2]\n"
- TT_5_YEAR_PLAN_CIVILIAN_FOCUS: "This will impact the 5-Year-Plan with modifiers:\nPolitical Power Gain: §R-5%§!\n§YInfrastrucure§! construction speed: §G+15.00%§!\n§YAir Base§! construction speed: §R-7.50%§!\n§YSAM-Site§! construction speed: §R-7.50%§!\n§YStrategic Fuel Reserve§! construction speed: §R-7.50%§!\n§YIntelligence Station§! construction speed: §R-7.50%§!\n§YMobile Radio Mast§! construction speed: §G+15.00%§!\n§YMilitary Industry§! construction speed: §R-7.50%§!\n§YCivilian Industry§! construction speed: §G+15.00%§!\n§YOffice Sector§! construction speed: §G+15.00%§!\n§YNaval Yard§! construction speed: §R-7.50%§!\n§YBiofuel Refinery§! construction speed: §R-7.50%§!\n§YNaval Base§! construction speed: §G+15.00%§!\n§YLand Fort§! construction speed: §R-7.50%§!\n§YCoastal Fort§! construction speed: §R-7.50%§!\nResource Gain Efficiency: §R-7.50%§!\n"
- TT_5_YEAR_PLAN_MILITARY_INFRASTRUCTURE_FOCUS: "This will impact the 5-Year-Plan with modifiers:\nPolitical Power Gain: §R-5%§!\n§YInfrastrucure§! construction speed: §G15.00%§!\n§YAir Base§! construction speed: §G15.00%§!\n§YSAM-Site§! construction speed: §G+15.00%§!\n§YStrategic Fuel Reserve§! construction speed: §G15.00%§!\n§YIntelligence Station§! construction speed: §G15.00%§!\n§YMobile Radio Mast§! construction speed: §R-7.50%§!\n§YMilitary Industry§! construction speed: §R-7.50%§!\n§YCivilian Industry§! construction speed: §R-7.50%§!\n§YOffice Sector§! construction speed: §R-7.50%§!\n§YNaval Yard§! construction speed: §R-7.50%§!\n§YBiofuel Refinery§! construction speed: §R-7.50%§!\n§YNaval Base§! construction speed: §G+15.00%§!\n§YLand Fort§! construction speed: §G+15.00%§!\n§YCoastal Fort§! construction speed: §G+15.00%§!\nResource Gain Efficiency: §R-7.50%§!\n"
- TT_5_YEAR_PLAN_MILITARY_PRODUCTION_FOCUS: "This will impact the 5-Year-Plan with modifiers:\nPolitical Power Gain: §R-5%§!\n§YInfrastrucure§! construction speed: §R-7.50%§!\n§YAir Base§! construction speed: §R-7.50%§!\n§YSAM-Site§! construction speed: §G+15.00%§!\n§YStrategic Fuel Reserve§! construction speed: §R-7.50%§!\n§YIntelligence Station§! construction speed: §R-7.50%§!\n§YMobile Radio Mast§! construction speed: §R-7.50%§!\n§YMilitary Industry§! construction speed: §G+15.00%§!\n§YCivilian Industry§! construction speed: §R-7.50%§!\n§YOffice Sector§! construction speed: §R-7.50%§!\n§YNaval Yard§! construction speed: §G+15.00%§!\n§YBiofuel Refinery§! construction speed: §R-7.50%§!\n§YNaval Base§! construction speed: §R-7.50%§!\n§YLand Fort§! construction speed: §R-7.50%§!\n§YCoastal Fort§! construction speed: §R-7.50%§!\nResource Gain Efficiency: §R-7.50%§!\n"
- TT_5_YEAR_PLAN_NAVAL_EXPANSION_FOCUS: "This will impact the 5-Year-Plan with modifiers:\nPolitical Power Gain: §R-5%§!\n§YInfrastrucure§! construction speed: §R-7.50%§!\n§YAir Base§! construction speed: §R-7.50%§!\n§YSAM-Site§! construction speed: §R-7.50%§!\n§YStrategic Fuel Reserve§! construction speed: §R-7.50%§!\n§YIntelligence Station§! construction speed: §R-7.50%§!\n§YMobile Radio Mast§! construction speed: §R-7.50%§!\n§YMilitary Industry§! construction speed: §R-7.50%§!\n§YCivilian Industry§! construction speed: §R-7.50%§!\n§YOffice Sector§! construction speed: §R-7.50%§!\n§YNaval Yard§! construction speed: §G+15.00%§!\n§YBiofuel Refinery§! construction speed: §R-7.50%§!\n§YNaval Base§! construction speed: §G+15.00%§!\n§YLand Fort§! construction speed: §R-7.50%§!\n§YCoastal Fort§! construction speed: §G+15.00%§!\nResource Gain Efficiency: §R-7.50%§!\n"
- TT_5_YEAR_PLAN_RESOURCE_EXPLOITATION_FOCUS: "This will impact the 5-Year-Plan with modifiers:\nPolitical Power Gain: §R-5%§!\n§YInfrastrucure§! construction speed: §G+15.00%§!\n§YAir Base§! construction speed: §R-7.50%§!\n§YSAM-Site§! construction speed: §R-7.50%§!\n§YStrategic Fuel Reserve§! construction speed: §G+15.00%§!\n§YIntelligence Station§! construction speed: §R-7.50%§!\n§YMobile Radio Mast§! construction speed: §R-7.50%§!\n§YMilitary Industry§! construction speed: §R-7.50%§!\n§YCivilian Industry§! construction speed: §R-7.50%§!\n§YOffice Sector§! construction speed: §R-7.50%§!\n§YNaval Yard§! construction speed: §R-7.50%§!\n§YBiofuel Refinery§! construction speed: §G+15.00%§!\n§YNaval Base§! construction speed: §R-7.50%§!\n§YLand Fort§! construction speed: §R-7.50%§!\n§YCoastal Fort§! construction speed: §R-7.50%§!\nResource Gain Efficiency: §G+15.00%§!\n"
+ TT_5_YEAR_PLAN_CURRENT_EFFECTS: "This will impact the 5-Year-Plan with modifiers:\nPolitical Power Gain: [?five_year_plan_political_power_factor|%=+0]\n§Y$infrastructure$§! construction speed: [?five_year_plan_infra_factor|%=+2]\n§Y$air_base$§! construction speed: [?five_year_plan_air_base_factor|%=+2]\n§Y$anti_air_building$§! construction speed: [?five_year_plan_anti_air_factor|%=+2]\n§YStrategic Fuel Reserve§! construction speed: [?five_year_plan_fuel_reserve_factor|%=+2]\n§YIntelligence Station§! construction speed: [?five_year_plan_intelligence_station_factor|%=+2]\n§Y$internet_station$§! construction speed: [?five_year_plan_mobile_radio_mast_factor|%=+2]\n§Y$arms_factory$§! construction speed: [?five_year_plan_MIC_factor|%=+2]\n§Y$industrial_complex$§! construction speed: [?five_year_plan_CIC_factor|%=+2]\n§Y$offices$§! construction speed: [?five_year_plan_office_factor|%=+2]\n§Y$dockyard$§! construction speed: [?five_year_plan_NIC_factor|%=+2]\n§Y$synthetic_refinery$§! construction speed: [?five_year_plan_refinery_factor|%=+2]\n§Y$naval_base$§! construction speed: [?five_year_plan_naval_base_factor|%=+2]\n§Y$bunker$§! construction speed: [?five_year_plan_land_bunker_factor|%=+2]\n§Y$coastal_bunker$§! construction speed: [?five_year_plan_coastal_bunker_factor|%=+2]\n$MODIFIER_LOCAL_RESOURCES_FACTOR$ [?five_year_plan_resources_factor|%=+2]"
+ TT_5_YEAR_PLAN_CIVILIAN_FOCUS: "This will impact the 5-Year-Plan with modifiers:\nPolitical Power Gain: §R-5%§!\n§Y$infrastructure$§! construction speed: §G+15.00%§!\n§Y$air_base$§! construction speed: §R-7.50%§!\n§Y$anti_air_building$§! construction speed: §R-7.50%§!\n§YStrategic Fuel Reserve§! construction speed: §R-7.50%§!\n§YIntelligence Station§! construction speed: §R-7.50%§!\n§YMobile Radio Mast§! construction speed: §G+15.00%§!\n§Y$arms_factory$§! construction speed: §R-7.50%§!\n§Y$industrial_complex$§! construction speed: §G+15.00%§!\n§Y$offices$§! construction speed: §G+15.00%§!\n§Y$dockyard$§! construction speed: §R-7.50%§!\n§Y$synthetic_refinery$§! construction speed: §R-7.50%§!\n§Y$naval_base$§! construction speed: §G+15.00%§!\n§Y$bunker$§! construction speed: §R-7.50%§!\n§Y$coastal_bunker$§! construction speed: §R-7.50%§!\n$MODIFIER_LOCAL_RESOURCES_FACTOR$ §R-7.50%§!\n"
+ TT_5_YEAR_PLAN_MILITARY_INFRASTRUCTURE_FOCUS: "This will impact the 5-Year-Plan with modifiers:\nPolitical Power Gain: §R-5%§!\n§Y$infrastructure$§! construction speed: §G+15.00%§!\n§Y$air_base$§! construction speed: §G+15.00%§!\n§Y$anti_air_building$§! construction speed: §G+15.00%§!\n§YStrategic Fuel Reserve§! construction speed: §G+15.00%§!\n§YIntelligence Station§! construction speed: §G+15.00%§!\n§YMobile Radio Mast§! construction speed: §R-7.50%§!\n§Y$arms_factory$§! construction speed: §R-7.50%§!\n§Y$industrial_complex$§! construction speed: §R-7.50%§!\n§Y$offices$§! construction speed: §R-7.50%§!\n§Y$dockyard$§! construction speed: §R-7.50%§!\n§Y$synthetic_refinery$§! construction speed: §R-7.50%§!\n§Y$naval_base$§! construction speed: §G+15.00%§!\n§Y$bunker$§! construction speed: §G+15.00%§!\n§Y$coastal_bunker$§! construction speed: §G+15.00%§!\n$MODIFIER_LOCAL_RESOURCES_FACTOR$ §R-7.50%§!\n"
+ TT_5_YEAR_PLAN_MILITARY_PRODUCTION_FOCUS: "This will impact the 5-Year-Plan with modifiers:\nPolitical Power Gain: §R-5%§!\n§Y$infrastructure$§! construction speed: §R-7.50%§!\n§Y$air_base$§! construction speed: §R-7.50%§!\n§Y$anti_air_building$§! construction speed: §G+15.00%§!\n§YStrategic Fuel Reserve§! construction speed: §R-7.50%§!\n§YIntelligence Station§! construction speed: §R-7.50%§!\n§YMobile Radio Mast§! construction speed: §R-7.50%§!\n§Y$arms_factory$§! construction speed: §G+15.00%§!\n§Y$industrial_complex$§! construction speed: §R-7.50%§!\n§Y$offices$§! construction speed: §R-7.50%§!\n§Y$dockyard$§! construction speed: §G+15.00%§!\n§Y$synthetic_refinery$§! construction speed: §R-7.50%§!\n§Y$naval_base$§! construction speed: §R-7.50%§!\n§Y$bunker$§! construction speed: §R-7.50%§!\n§Y$coastal_bunker$§! construction speed: §R-7.50%§!\n$MODIFIER_LOCAL_RESOURCES_FACTOR$ §R-7.50%§!\n"
+ TT_5_YEAR_PLAN_NAVAL_EXPANSION_FOCUS: "This will impact the 5-Year-Plan with modifiers:\nPolitical Power Gain: §R-5%§!\n§Y$infrastructure$§! construction speed: §R-7.50%§!\n§Y$air_base$§! construction speed: §R-7.50%§!\n§Y$anti_air_building$§! construction speed: §R-7.50%§!\n§YStrategic Fuel Reserve§! construction speed: §R-7.50%§!\n§YIntelligence Station§! construction speed: §R-7.50%§!\n§YMobile Radio Mast§! construction speed: §R-7.50%§!\n§Y$arms_factory$§! construction speed: §R-7.50%§!\n§Y$industrial_complex$§! construction speed: §R-7.50%§!\n§Y$offices$§! construction speed: §R-7.50%§!\n§Y$dockyard$§! construction speed: §G+15.00%§!\n§Y$synthetic_refinery$§! construction speed: §R-7.50%§!\n§Y$naval_base$§! construction speed: §G+15.00%§!\n§Y$bunker$§! construction speed: §R-7.50%§!\n§Y$coastal_bunker$§! construction speed: §G+15.00%§!\n$MODIFIER_LOCAL_RESOURCES_FACTOR$ §R-7.50%§!\n"
+ TT_5_YEAR_PLAN_RESOURCE_EXPLOITATION_FOCUS: "This will impact the 5-Year-Plan with modifiers:\nPolitical Power Gain: §R-5%§!\n§Y$infrastructure$§! construction speed: §G+15.00%§!\n§Y$air_base$§! construction speed: §R-7.50%§!\n§Y$anti_air_building$§! construction speed: §R-7.50%§!\n§YStrategic Fuel Reserve§! construction speed: §G+15.00%§!\n§YIntelligence Station§! construction speed: §R-7.50%§!\n§YMobile Radio Mast§! construction speed: §R-7.50%§!\n§Y$arms_factory$§! construction speed: §R-7.50%§!\n§Y$industrial_complex$§! construction speed: §R-7.50%§!\n§Y$offices$§! construction speed: §R-7.50%§!\n§Y$dockyard$§! construction speed: §R-7.50%§!\n§Y$synthetic_refinery$§! construction speed: §G+15.00%§!\n§Y$naval_base$§! construction speed: §R-7.50%§!\n§Y$bunker$§! construction speed: §R-7.50%§!\n§Y$coastal_bunker$§! construction speed: §R-7.50%§!\n$MODIFIER_LOCAL_RESOURCES_FACTOR$ §G+15.00%§!\n"
  TT_ABANDON_5_YEAR_PLAN: "§H[Root.GetLeader]§! disappears mysteriously.\nLuckily there is someone from the §H[show_ruling_party]§! who is very eager to serve as the leader\n\n"
  TT_HAS_20_INFLUENCE: "The target has at least 20% influence on us"
  TT_HAS_INVESTMENTS: "The target has §YInternational Investments§!"
