@@ -8,12 +8,16 @@ Bugfixes:
  - Fixed bad localization call in Ivory Coast news event
  - Fixed New Turkish Submarines using the wrong hull type
  - Fixed display issue in the GDP/C dynamic research slot system
+ - Fixed 5-year-plan decision effects for resource gain efficiency and offices
 
 Content:
  - Victor of the Ivory Coast Civil war should now become Ivory Coast again
 
 Graphics:
  - Added 4 new generic portraits
+
+Localisation:
+ - Better localisation for 5-year-plan decisions
 
 v1.7.2 - Nov/Dec Patch
 
